# affinity-sync

./: .gitignore  LISCENCE  pyproject.toml  todo.md  x.sh
.github/workflows/: publish.yml
affinity_sync/: cli.py  reader.py  sync.py  writer.py
affinity_sync/clients/: __init__.py  affinity.py  affinity_v1.py  postgres.py
affinity_sync/module_types/: affinity_v2_api.py  db_types.py
